Incorporar valoracion de solicitudes cerradas
